tests/errors/collections/list_dict_key_error.sad
l = [{"x": 1}]
show(l[0]["y"])
